--- a/template/01/像素度量.html
+++ b/template/01/像素度量.html
@@ -14,9 +14,14 @@
     <canvas id="webgl-canvas" width="500" height="500"></canvas>
     <script type="vertex" id="vertexShader">
       attribute vec2 a_Position;
+      uniform vec2 u_resolution;
       void main() {
-        gl_Position = vec4(a_Position,0.0,-0.5); // 设置顶点位置 x,y,z,w,坐标数据w默认是1.0
-        gl_PointSize = 10.0; // 设置点的大小
+        vec2 zeroToOne = a_Position / u_resolution;
+        vec2 zeroToTwo = zeroToOne * 2.0;
+        vec2 clipSpace = zeroToTwo - 1.0;
+
+        gl_Position = vec4(clipSpace * vec2(1,-1),0.0,1.0);
+        gl_PointSize = 2.0;
       }
     </script>
     <script type="fragment" id="fragmentShader">
@@ -37,24 +42,16 @@
       }
 
       const vertexSource = document.getElementById("vertexShader").innerText;
-      // const vertexSource = `
-      // attribute vec2 a_Position;
-      // void main() {
-      //   gl_Position = vec4(a_Position,0.0,1.0);
-      // }
-      // `;
+
       const fragmentSource =
         document.getElementById("fragmentShader").innerText;
-      // const fragmentSource = `
-      //  void main() {
-      //   gl_FragColor = vec4(1.0,0.0,0.0,1.0);
-      //  }
-      // `;
 
       const program = initShader(gl, vertexSource, fragmentSource);
 
       // 创建顶点数据
-      const vertices = new Float32Array([0.0, 0.5, -0.5, -0.5, 0.5, -0.5]);
+      const vertices = new Float32Array([
+        10, 20, 80, 20, 10, 30, 10, 30, 80, 20, 80, 30,
+      ]);
 
       // 创建顶点缓冲区
       const buffer = gl.createBuffer();
@@ -68,21 +65,18 @@
       // 获取顶点属性
       const positionLocation = gl.getAttribLocation(program, "a_Position");
 
+      const resolutionLocation = gl.getUniformLocation(program, "u_resolution");
+
+      gl.uniform2f(resolutionLocation, canvas.width, canvas.height);
+
       // 启用顶点属性数组
       gl.enableVertexAttribArray(positionLocation);
 
       // 指定解析数据规则
-      gl.vertexAttribPointer(
-        positionLocation,
-        2,
-        gl.FLOAT,
-        false,
-        2 * Float32Array.BYTES_PER_ELEMENT,
-        0
-      );
+      gl.vertexAttribPointer(positionLocation, 2, gl.FLOAT, false, 0, 0);
 
       // 绘制
-      gl.drawArrays(gl.LINE_LOOP, 0, 3); // gl.POINTS, gl.LINES, gl.LINE_STRIP, gl.LINE_LOOP, gl.TRIANGLES, gl.TRIANGLE_STRIP, gl.TRIANGLE_FAN
+      gl.drawArrays(gl.TRIANGLES, 0, 6); // gl.POINTS, gl.LINES, gl.LINE_STRIP, gl.LINE_LOOP, gl.TRIANGLES, gl.TRIANGLE_STRIP, gl.TRIANGLE_FAN
     </script>
   </body>
 </html>
