--- a/template/01/正方形颜色.html
+++ b/template/01/正方形颜色.html
@@ -15,13 +15,14 @@
     <script type="vertex" id="vertexShader">
       attribute vec2 a_Position;
       void main() {
-        gl_Position = vec4(a_Position,0.0,-0.5); // 设置顶点位置 x,y,z,w,坐标数据w默认是1.0
-        gl_PointSize = 10.0; // 设置点的大小
+        gl_Position = vec4(a_Position,0.0,1.0);
+        gl_PointSize = 2.0;
       }
     </script>
     <script type="fragment" id="fragmentShader">
+      uniform vec4 u_Color;
       void main() {
-        gl_FragColor = vec4(1.0,0.0,0.0,1.0);
+        gl_FragColor = u_Color; // 红色
       }
     </script>
     <script type="module">
@@ -37,24 +38,20 @@
       }
 
       const vertexSource = document.getElementById("vertexShader").innerText;
-      // const vertexSource = `
-      // attribute vec2 a_Position;
-      // void main() {
-      //   gl_Position = vec4(a_Position,0.0,1.0);
-      // }
-      // `;
+
       const fragmentSource =
         document.getElementById("fragmentShader").innerText;
-      // const fragmentSource = `
-      //  void main() {
-      //   gl_FragColor = vec4(1.0,0.0,0.0,1.0);
-      //  }
-      // `;
 
       const program = initShader(gl, vertexSource, fragmentSource);
 
       // 创建顶点数据
-      const vertices = new Float32Array([0.0, 0.5, -0.5, -0.5, 0.5, -0.5]);
+      const vertices = new Float32Array([
+        -1.0, -1.0, 1.0, -1.0, -1.0, 1.0, -1.0, 1.0, 1.0, -1.0, 1.0, 1.0,
+      ]);
+
+      const colorLocation = gl.getUniformLocation(program, "u_Color");
+
+      gl.uniform4f(colorLocation, 1.0, 0.0, 0.0, 1.0); // 红色
 
       // 创建顶点缓冲区
       const buffer = gl.createBuffer();
@@ -82,7 +79,7 @@
       );
 
       // 绘制
-      gl.drawArrays(gl.LINE_LOOP, 0, 3); // gl.POINTS, gl.LINES, gl.LINE_STRIP, gl.LINE_LOOP, gl.TRIANGLES, gl.TRIANGLE_STRIP, gl.TRIANGLE_FAN
+      gl.drawArrays(gl.TRIANGLES, 0, 6); // gl.POINTS, gl.LINES, gl.LINE_STRIP, gl.LINE_LOOP, gl.TRIANGLES, gl.TRIANGLE_STRIP, gl.TRIANGLE_FAN
     </script>
   </body>
 </html>
