尝试用drawElements绘制立方体

--- a/template/03/顶点索引绘制立方体.html
+++ b/template/03/顶点索引绘制立方体.html
@@ -60,93 +60,63 @@
 
       const program = initShader(gl, vertexSource, fragmentSource);
 
-      // 创建顶点数据 屏幕向右为轴正反向 屏幕向上为y轴正方形  屏幕向外为z轴正方形 （参考右手坐标系）
-      // -0.5, -0.5, -0.5,1.0 后左下顶点
-      // 0.5, -0.5, -0.5,1.0 后右下顶点
-      //  0.5,-0.5, 0.5,1.0 前右下顶点
-      //  -0.5,-0.5,0.5,1.0 前左下顶点
-
-      // -0.5, 0.5, -0.5,1.0 后左上顶点
-      // 0.5, 0.5, -0.5,1.0 后右上顶点
-      //  0.5, 0.5,0.5,1.0 前右上顶点
-      //  -0.5,0.5,0.5,1.0 前左上顶点
-      // 后左下链接后左上
+      // 按4个坐标组成一个面，一共6个面
+      // 下面
       // -0.5, -0.5, -0.5,1.0
-      //  -0.5, 0.5, -0.5,1.0
-      // 后右下链接后右上
       // 0.5, -0.5, -0.5,1.0
-      //  0.5, 0.5, -0.5,1.0
-      // 前右下链接前右上
-      // 0.5,-0.5, 0.5,1.0
-      // 0.5, 0.5,0.5,1.0
-      // 前左下链接前左上
+      //  0.5,-0.5, 0.5,1.0
       //  -0.5,-0.5,0.5,1.0
+
+      // 上面
+      // -0.5, 0.5, -0.5,1.0
+      // 0.5, 0.5, -0.5,1.0
+      //  0.5, 0.5,0.5,1.0
       //  -0.5,0.5,0.5,1.0
+
+      // 前面
+      // 0.5,-0.5, 0.5,1.0
+      //  -0.5,-0.5,0.5,1.0
+      //  0.5, 0.5,0.5,1.0
+      //  -0.5,0.5,0.5,1.0
+
+      // 后面
+      // -0.5, -0.5, -0.5,1.0
+      // 0.5, -0.5, -0.5,1.0
+      //  -0.5, 0.5, -0.5,1.0
+      //  0.5, 0.5, -0.5,1.0
+
+      // 左面
+      //  -0.5, -0.5, -0.5,1.0
+      //  -0.5,-0.5,0.5,1.0
+      //  -0.5, 0.5, -0.5,1.0
+      //  -0.5,0.5,0.5,1.0
+
+      // 右面
+      // 0.5, -0.5, -0.5,1.0
+      // 0.5,-0.5, 0.5,1.0
+      // 0.5, 0.5, -0.5,1.0
+      // 0.5, 0.5,0.5,1.0
+
+      // 将数据存入坐标中
       const vertices = new Float32Array([
-        -0.5,
-        -0.5,
-        -0.5,
-        1.0, //
-        0.5,
-        -0.5,
-        -0.5,
-        1.0, //
-        0.5,
-        -0.5,
-        0.5,
-        1.0, //
-        -0.5,
-        -0.5,
-        0.5,
-        1.0, //
-        -0.5,
-        0.5,
-        -0.5,
-        1.0, //
-        0.5,
-        0.5,
-        -0.5,
-        1.0, //
-        0.5,
-        0.5,
-        0.5,
-        1.0, //
-        -0.5,
-        0.5,
-        0.5,
-        1.0, //
-        -0.5,
-        -0.5,
-        -0.5,
-        1.0,
-        -0.5,
-        0.5,
-        -0.5,
-        1.0, //
-        0.5,
-        -0.5,
-        -0.5,
-        1.0,
-        0.5,
-        0.5,
-        -0.5,
-        1.0, //
-        0.5,
-        -0.5,
-        0.5,
-        1.0,
-        0.5,
-        0.5,
-        0.5,
-        1.0, //
-        -0.5,
-        -0.5,
-        0.5,
-        1.0,
-        -0.5,
-        0.5,
-        0.5,
-        1.0,
+        // 下面
+        -0.5, -0.5, -0.5, 1.0, 0.5, -0.5, -0.5, 1.0, 0.5, -0.5, 0.5, 1.0, -0.5,
+        -0.5, 0.5, 1.0,
+        // 上面
+        -0.5, 0.5, -0.5, 1.0, 0.5, 0.5, -0.5, 1.0, 0.5, 0.5, 0.5, 1.0, -0.5,
+        0.5, 0.5, 1.0,
+        // 前面
+        0.5, -0.5, 0.5, 1.0, -0.5, -0.5, 0.5, 1.0, 0.5, 0.5, 0.5, 1.0, -0.5,
+        0.5, 0.5, 1.0,
+        // 后面
+        -0.5, -0.5, -0.5, 1.0, 0.5, -0.5, -0.5, 1.0, -0.5, 0.5, -0.5, 1.0, 0.5,
+        0.5, -0.5, 1.0,
+        // 左面
+        -0.5, -0.5, -0.5, 1.0, -0.5, -0.5, 0.5, 1.0, -0.5, 0.5, -0.5, 1.0, -0.5,
+        0.5, 0.5, 1.0,
+        // 右面
+        0.5, -0.5, -0.5, 1.0, 0.5, -0.5, 0.5, 1.0, 0.5, 0.5, -0.5, 1.0, 0.5,
+        0.5, 0.5, 1.0,
       ]);
 
       // 创建顶点缓冲区
@@ -158,6 +128,19 @@
       // 将顶点数据存入缓冲区中
       gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW); // gl.STATIC_DRAW, gl.DYNAMIC_DRAW,gl.STREAM_DRAW
 
+      // 按面的点数据导入的索引形成三角形，为后续利用三角形形成面做数据基础
+      // 比如 下面拆成
+      // 0,1,2
+      // 2,3,0
+      const indices = new Uint16Array([
+        0, 1, 2, 2, 3, 0, 4, 5, 6, 6, 7, 4, 2, 3, 7, 7, 6, 2, 0, 1, 5, 5, 4, 0,
+        0, 3, 7, 7, 4, 0, 1, 2, 6, 6, 5, 1,
+      ]);
+
+      const indexBuffer = gl.createBuffer();
+      gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer);
+      gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, indices, gl.STATIC_DRAW);
+
       // 获取顶点属性
       const positionLocation = gl.getAttribLocation(program, "a_Position");
 
@@ -167,17 +150,8 @@
       // 指定解析数据规则
       gl.vertexAttribPointer(positionLocation, 4, gl.FLOAT, false, 0, 0);
 
-      // 绘制第一个面
-      gl.drawArrays(gl.POINTS, 0, 4);
-      gl.drawArrays(gl.LINE_LOOP, 0, 4);
-      // 绘制第二个面
-      gl.drawArrays(gl.POINTS, 4, 4);
-      gl.drawArrays(gl.LINE_LOOP, 4, 4);
-      // 两个面链接
-      gl.drawArrays(gl.LINES, 8, 2);
-      gl.drawArrays(gl.LINES, 10, 2); // 这里练错了 可能是坐标轴方向搞混了
-      gl.drawArrays(gl.LINES, 12, 2);
-      gl.drawArrays(gl.LINES, 14, 2);
+      // gl.drawElements(gl.TRIANGLE_FAN, indices.length, gl.UNSIGNED_SHORT, 0);
+      gl.drawElements(gl.LINE_STRIP, indices.length, gl.UNSIGNED_SHORT, 0);
     </script>
   </body>
 </html>
